update Numpy exercises

--- a/ML/Numpy_Easy.ipynb
+++ b/ML/Numpy_Easy.ipynb
@@ -223,7 +223,10 @@
    "cell_type": "code",
    "execution_count": 3,
    "id": "0dbc714f-a3fe-447c-9671-c49c5edda28b",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true,
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -364,7 +367,10 @@
   {
    "cell_type": "markdown",
    "id": "3f3e8dbd-341d-418b-80f4-e2cee7731b4f",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
    "source": [
     "# Ants move in the numpy array\n",
     "Create an array that starts at 2 and goes up to 10 in steps of 0.1 and store it in variable a3\n",
@@ -412,7 +418,9 @@
   {
    "cell_type": "markdown",
    "id": "02bb13b3-6f8f-4cf1-b807-51f45eeb6118",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "# Uniformly Spaced Numbers\n",
     "Create an array containing 5 elements between the numbers 1 to 122 in such a way that the numbers 1 and 121 are part of this array and the distance between the numbers should be equal. store the array in a5 variable"
