--- a/ML/Numpy_Medium_Hard.ipynb
+++ b/ML/Numpy_Medium_Hard.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "ac6c1544-93fb-40de-bf6b-58b270237517",
    "metadata": {},
    "outputs": [],
@@ -155,7 +155,10 @@
   {
    "cell_type": "markdown",
    "id": "1aa284bb-28aa-4c90-b8d6-5dfd4d115cc8",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
    "source": [
     "# Diagonal 2D Array\n",
     "Create a 5×5 array that it's main diameter contains the numbers from 1 to 125 with equal distance and other elements are equal to zero then store it in the a9 variable."
@@ -197,9 +200,211 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b87e0922-009c-4ffd-bbc8-86894330c003",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
+   "source": [
+    "# Diagonal Array Indexing\n",
+    "A 5×5 array is stored in a variable named z, store the value of the second diameter lower than the main diameter in a variable called a10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "2d461240-f32b-47b6-b950-db0ae4c5c04f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "z = np.arange(25).reshape(5, 5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "7e397544-e209-45fe-9a34-1677ae546c5b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0,  1,  2,  3,  4],\n",
+       "       [ 5,  6,  7,  8,  9],\n",
+       "       [10, 11, 12, 13, 14],\n",
+       "       [15, 16, 17, 18, 19],\n",
+       "       [20, 21, 22, 23, 24]])"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "z"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "92c6369d-7427-481d-9267-7d213917fd51",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a10 = np.diag(z, -2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "b7e22431-7cea-41af-9e31-f9cc4cd13432",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([10, 16, 22])"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a10"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9c3e733b-83a4-467e-9221-78234a4acff1",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
+   "source": [
+    "# Random Array\n",
+    "Create a 6x4 array with all random elements and store it in variable a13 ."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "638cf0fa-1cd7-44a9-8793-f7a73ce510d5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rng = np.random.default_rng(seed=None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "3cc5844e-efbe-46d5-908f-69bbf68cf485",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.28663319, 0.28124465, 0.49241091, 0.754318  ],\n",
+       "       [0.43854998, 0.57989718, 0.26961229, 0.08495872],\n",
+       "       [0.92849765, 0.55764499, 0.42571313, 0.11369205],\n",
+       "       [0.30030378, 0.08130949, 0.70947495, 0.95837295],\n",
+       "       [0.61448963, 0.59356239, 0.28537565, 0.19909576],\n",
+       "       [0.01287736, 0.23425874, 0.78359459, 0.42139248]])"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rng.random((6, 4))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2874eac1-d979-4937-a24f-ea2f0f053b7b",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "# An array with repeating rows\n",
+    "Using numpy with one line of code, create an array similar to the one below and store it in the a16  variable.\n",
+    "### array\n",
+    "      ([[-inf,  nan,  inf],\n",
+    "       [-inf,  nan,  inf],\n",
+    "       [-inf,  nan,  inf],\n",
+    "       [-inf,  nan,  inf],\n",
+    "       [-inf,  nan,  inf],\n",
+    "       [-inf,  nan,  inf]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "7640060a-16b7-4b0e-8413-89ecc7bc6ce0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a16 = np.full((6, 3), [-np.inf, np.nan, np.inf])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "2d5ee399-27a2-445e-944e-5d6b39f65ba3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-inf,  nan,  inf],\n",
+       "       [-inf,  nan,  inf],\n",
+       "       [-inf,  nan,  inf],\n",
+       "       [-inf,  nan,  inf],\n",
+       "       [-inf,  nan,  inf],\n",
+       "       [-inf,  nan,  inf]])"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a16"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "820b2457-4973-4535-9aea-990ce7836cbf",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "acae78a7-5a4c-4e79-a415-9d8caf427c7a",
+   "id": "cf87907e-f974-4ae1-b959-63b41f90cb9b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d0040d8e-484b-4d00-9b90-2e6a3647d01d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5658738b-76a9-4849-8d47-0af47a3c3baf",
    "metadata": {},
    "outputs": [],
    "source": []
